--- a/notebooks/preprocessing and eda.ipynb
+++ b/notebooks/preprocessing and eda.ipynb
@@ -656,10 +656,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TSLA Outliers:\n",
+      "Ticker      TSLA\n",
+      "Date            \n",
+      "2020-01-03   NaN\n",
+      "2020-01-06   NaN\n",
+      "2020-01-07   NaN\n",
+      "2020-01-08   NaN\n",
+      "2020-01-09   NaN\n",
+      "...          ...\n",
+      "2025-02-24   NaN\n",
+      "2025-02-25   NaN\n",
+      "2025-02-26   NaN\n",
+      "2025-02-27   NaN\n",
+      "2025-02-28   NaN\n",
+      "\n",
+      "[1296 rows x 1 columns]\n",
+      "\n",
+      "\n",
+      "BND Outliers:\n",
+      "Ticker      BND\n",
+      "Date           \n",
+      "2020-01-03  NaN\n",
+      "2020-01-06  NaN\n",
+      "2020-01-07  NaN\n",
+      "2020-01-08  NaN\n",
+      "2020-01-09  NaN\n",
+      "...         ...\n",
+      "2025-02-24  NaN\n",
+      "2025-02-25  NaN\n",
+      "2025-02-26  NaN\n",
+      "2025-02-27  NaN\n",
+      "2025-02-28  NaN\n",
+      "\n",
+      "[1296 rows x 1 columns]\n",
+      "\n",
+      "\n",
+      "SPY Outliers:\n",
+      "Ticker      SPY\n",
+      "Date           \n",
+      "2020-01-03  NaN\n",
+      "2020-01-06  NaN\n",
+      "2020-01-07  NaN\n",
+      "2020-01-08  NaN\n",
+      "2020-01-09  NaN\n",
+      "...         ...\n",
+      "2025-02-24  NaN\n",
+      "2025-02-25  NaN\n",
+      "2025-02-26  NaN\n",
+      "2025-02-27  NaN\n",
+      "2025-02-28  NaN\n",
+      "\n",
+      "[1296 rows x 1 columns]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify outliers using Z-score method\n",
+    "for ticker in tickers:\n",
+    "    df = daily_returns[ticker]\n",
+    "    z_scores = (df - df.mean()) / df.std()\n",
+    "    outliers = df[np.abs(z_scores) > 3]\n",
+    "    print(f\"{ticker} Outliers:\")\n",
+    "    print(outliers)\n",
+    "    print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
