--- a/notebooks/preprocessing and eda.ipynb
+++ b/notebooks/preprocessing and eda.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -664,68 +664,97 @@
      "output_type": "stream",
      "text": [
       "TSLA Outliers:\n",
-      "Ticker      TSLA\n",
-      "Date            \n",
-      "2020-01-03   NaN\n",
-      "2020-01-06   NaN\n",
-      "2020-01-07   NaN\n",
-      "2020-01-08   NaN\n",
-      "2020-01-09   NaN\n",
-      "...          ...\n",
-      "2025-02-24   NaN\n",
-      "2025-02-25   NaN\n",
-      "2025-02-26   NaN\n",
-      "2025-02-27   NaN\n",
-      "2025-02-28   NaN\n",
-      "\n",
-      "[1296 rows x 1 columns]\n",
+      "Date\n",
+      "2020-02-03    0.198949\n",
+      "2020-02-04    0.137256\n",
+      "2020-02-05   -0.171758\n",
+      "2020-02-27   -0.128146\n",
+      "2020-03-09   -0.135725\n",
+      "2020-03-16   -0.185778\n",
+      "2020-03-18   -0.160344\n",
+      "2020-03-19    0.183877\n",
+      "2020-03-24    0.162817\n",
+      "2020-04-13    0.136038\n",
+      "2020-07-06    0.134794\n",
+      "2020-08-12    0.131236\n",
+      "2020-09-08   -0.210628\n",
+      "2021-03-09    0.196412\n",
+      "2022-01-03    0.135317\n",
+      "2024-04-29    0.153069\n",
+      "2024-10-24    0.219190\n",
+      "2024-11-06    0.147510\n",
+      "Name: Close, dtype: float64\n",
       "\n",
       "\n",
       "BND Outliers:\n",
-      "Ticker      BND\n",
-      "Date           \n",
-      "2020-01-03  NaN\n",
-      "2020-01-06  NaN\n",
-      "2020-01-07  NaN\n",
-      "2020-01-08  NaN\n",
-      "2020-01-09  NaN\n",
-      "...         ...\n",
-      "2025-02-24  NaN\n",
-      "2025-02-25  NaN\n",
-      "2025-02-26  NaN\n",
-      "2025-02-27  NaN\n",
-      "2025-02-28  NaN\n",
-      "\n",
-      "[1296 rows x 1 columns]\n",
+      "Date\n",
+      "2020-03-10   -0.013445\n",
+      "2020-03-11   -0.018939\n",
+      "2020-03-12   -0.054385\n",
+      "2020-03-13    0.042201\n",
+      "2020-03-17   -0.020685\n",
+      "2020-03-18   -0.024140\n",
+      "2020-03-20    0.016955\n",
+      "2020-03-23    0.022149\n",
+      "2020-03-25    0.013440\n",
+      "2022-06-13   -0.016153\n",
+      "2022-09-28    0.015543\n",
+      "2022-11-10    0.020702\n",
+      "Name: Close, dtype: float64\n",
       "\n",
       "\n",
       "SPY Outliers:\n",
-      "Ticker      SPY\n",
-      "Date           \n",
-      "2020-01-03  NaN\n",
-      "2020-01-06  NaN\n",
-      "2020-01-07  NaN\n",
-      "2020-01-08  NaN\n",
-      "2020-01-09  NaN\n",
-      "...         ...\n",
-      "2025-02-24  NaN\n",
-      "2025-02-25  NaN\n",
-      "2025-02-26  NaN\n",
-      "2025-02-27  NaN\n",
-      "2025-02-28  NaN\n",
-      "\n",
-      "[1296 rows x 1 columns]\n",
+      "Date\n",
+      "2020-02-27   -0.044911\n",
+      "2020-03-02    0.043306\n",
+      "2020-03-04    0.042033\n",
+      "2020-03-09   -0.078094\n",
+      "2020-03-10    0.051745\n",
+      "2020-03-11   -0.048749\n",
+      "2020-03-12   -0.095677\n",
+      "2020-03-13    0.085486\n",
+      "2020-03-16   -0.109424\n",
+      "2020-03-17    0.053992\n",
+      "2020-03-18   -0.050633\n",
+      "2020-03-20   -0.043094\n",
+      "2020-03-24    0.090603\n",
+      "2020-03-26    0.058390\n",
+      "2020-04-01   -0.045005\n",
+      "2020-04-06    0.067166\n",
+      "2020-06-11   -0.057649\n",
+      "2022-05-18   -0.040311\n",
+      "2022-09-13   -0.043482\n",
+      "2022-11-10    0.054954\n",
+      "Name: Close, dtype: float64\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Ensure columns are single-level (if MultiIndex exists)\n",
+    "for ticker in tickers:\n",
+    "    df = data[ticker]\n",
+    "    if isinstance(df.columns, pd.MultiIndex):\n",
+    "        df.columns = df.columns.get_level_values(0)  # Flatten columns\n",
+    "    data[ticker] = df\n",
+    "\n",
+    "# Compute daily returns as Series\n",
+    "daily_returns = {}\n",
+    "for ticker in tickers:\n",
+    "    close_prices = data[ticker]['Close']\n",
+    "    # Convert to Series if it's a DataFrame\n",
+    "    if isinstance(close_prices, pd.DataFrame):\n",
+    "        close_series = close_prices.squeeze()\n",
+    "    else:\n",
+    "        close_series = close_prices\n",
+    "    daily_returns[ticker] = close_series.pct_change().dropna()\n",
+    "\n",
     "# Identify outliers using Z-score method\n",
     "for ticker in tickers:\n",
-    "    df = daily_returns[ticker]\n",
-    "    z_scores = (df - df.mean()) / df.std()\n",
-    "    outliers = df[np.abs(z_scores) > 3]\n",
+    "    returns = daily_returns[ticker]\n",
+    "    z_scores = (returns - returns.mean()) / returns.std()\n",
+    "    outliers = returns[np.abs(z_scores) > 3]\n",
     "    print(f\"{ticker} Outliers:\")\n",
     "    print(outliers)\n",
     "    print(\"\\n\")"
