--- a/notebooks/time-series forcasting.ipynb
+++ b/notebooks/time-series forcasting.ipynb
@@ -394,6 +394,59 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sarima_forecast' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Extract predicted values from ARIMA and SARIMA forecasts\u001b[39;00m\n\u001b[32m      5\u001b[39m arima_forecast_values = forecast.predicted_mean\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m sarima_forecast_values = \u001b[43msarima_forecast\u001b[49m.predicted_mean\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# ARIMA Evaluation\u001b[39;00m\n\u001b[32m      9\u001b[39m arima_mae = mean_absolute_error(test_data, arima_forecast_values)\n",
+      "\u001b[31mNameError\u001b[39m: name 'sarima_forecast' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "# Extract predicted values from ARIMA and SARIMA forecasts\n",
+    "arima_forecast_values = forecast.predicted_mean\n",
+    "sarima_forecast_values = sarima_forecast.predicted_mean\n",
+    "\n",
+    "# ARIMA Evaluation\n",
+    "arima_mae = mean_absolute_error(test_data, arima_forecast_values)\n",
+    "arima_rmse = np.sqrt(mean_squared_error(test_data, arima_forecast_values))\n",
+    "arima_mape = np.mean(np.abs((test_data - arima_forecast_values) / test_data)) * 100\n",
+    "\n",
+    "# SARIMA Evaluation\n",
+    "sarima_mae = mean_absolute_error(test_data, sarima_forecast_values)\n",
+    "sarima_rmse = np.sqrt(mean_squared_error(test_data, sarima_forecast_values))\n",
+    "sarima_mape = np.mean(np.abs((test_data - sarima_forecast_values) / test_data)) * 100\n",
+    "\n",
+    "# LSTM Evaluation\n",
+    "lstm_mae = mean_absolute_error(y_test, lstm_forecast)\n",
+    "lstm_rmse = np.sqrt(mean_squared_error(y_test, lstm_forecast))\n",
+    "lstm_mape = np.mean(np.abs((y_test - lstm_forecast) / y_test)) * 100\n",
+    "\n",
+    "# Print the evaluation metrics\n",
+    "print(f\"ARIMA MAE: {arima_mae}, RMSE: {arima_rmse}, MAPE: {arima_mape}\")\n",
+    "print(f\"SARIMA MAE: {sarima_mae}, RMSE: {sarima_rmse}, MAPE: {sarima_mape}\")\n",
+    "print(f\"LSTM MAE: {lstm_mae}, RMSE: {lstm_rmse}, MAPE: {lstm_mape}\")\n"
+   ]
   }
  ],
  "metadata": {
