--- a/notebooks/future market trends.ipynb
+++ b/notebooks/future market trends.ipynb
@@ -164,6 +164,54 @@
     "    joblib.dump(models[asset], f\"models/{asset}_sarima.pkl\")\n",
     "    print(f\"{asset} model AIC: {models[asset].aic:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Forecasting TSLA...\n",
+      "TSLA forecast saved!\n",
+      "\n",
+      "Forecasting BND...\n",
+      "BND forecast saved!\n",
+      "\n",
+      "Forecasting SPY...\n",
+      "SPY forecast saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Generate Forecasts\n",
+    "# ======================\n",
+    "forecast_months = 6\n",
+    "business_days = forecast_months * 21  # Approx 21 trading days/month\n",
+    "\n",
+    "forecasts = {}\n",
+    "for asset in assets:\n",
+    "    print(f\"\\nForecasting {asset}...\")\n",
+    "    # Load trained model\n",
+    "    model = joblib.load(f\"models/{asset}_sarima.pkl\")\n",
+    "    \n",
+    "    # Generate forecast with 95% CI\n",
+    "    forecast = model.get_forecast(steps=business_days)\n",
+    "    forecast_df = pd.DataFrame({\n",
+    "        'Date': forecast.predicted_mean.index,\n",
+    "        'Forecast': forecast.predicted_mean.values,\n",
+    "        'CI_Lower': forecast.conf_int().iloc[:,0],\n",
+    "        'CI_Upper': forecast.conf_int().iloc[:,1]\n",
+    "    }).set_index('Date')\n",
+    "    \n",
+    "    # Save forecasts\n",
+    "    forecast_df.to_csv(f\"forecasts/{asset}_forecast.csv\")\n",
+    "    forecasts[asset] = forecast_df\n",
+    "    print(f\"{asset} forecast saved!\")\n"
+   ]
   }
  ],
  "metadata": {
