trend and risk analysis

--- a/notebooks/future market trends.ipynb
+++ b/notebooks/future market trends.ipynb
@@ -260,6 +260,71 @@
     "plt.savefig('forecasts/combined_forecasts.png', dpi=300)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Trend Analysis Report:\n",
+      "\n",
+      "TSLA Analysis:\n",
+      "- Predicted Growth: 6.30%\n",
+      "- Average Confidence Interval Width: $192.21\n",
+      "- Recent Historical Volatility (30-day): 0.0352\n",
+      "  * High forecast uncertainty (wide CI) typical for growth stocks\n",
+      "\n",
+      "BND Analysis:\n",
+      "- Predicted Growth: 0.45%\n",
+      "- Average Confidence Interval Width: $6.83\n",
+      "- Recent Historical Volatility (30-day): 0.0026\n",
+      "  * Interest rate sensitivity in bond markets\n",
+      "\n",
+      "SPY Analysis:\n",
+      "- Predicted Growth: 3.40%\n",
+      "- Average Confidence Interval Width: $96.19\n",
+      "- Recent Historical Volatility (30-day): 0.0083\n",
+      "  * Market-wide systemic risks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Administrator.MMCY\\AppData\\Local\\Temp\\ipykernel_6932\\1045697109.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  price_change = (forecast['Forecast'][-1] - forecast['Forecast'][0]) / forecast['Forecast'][0] * 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Trend & Risk Analysis\n",
+    "# ======================\n",
+    "print(\"\\nTrend Analysis Report:\")\n",
+    "for asset in assets:\n",
+    "    forecast = forecasts[asset]\n",
+    "    historical = data[asset]\n",
+    "\n",
+    "    # Calculate metrics\n",
+    "    price_change = (forecast['Forecast'][-1] - forecast['Forecast'][0]) / forecast['Forecast'][0] * 100\n",
+    "    avg_ci_width = np.mean(forecast['CI_Upper'] - forecast['CI_Lower'])\n",
+    "    last_volatility = historical.pct_change().rolling(30).std().values[-1].item()  #\n",
+    "\n",
+    "    print(f\"\\n{asset} Analysis:\")\n",
+    "    print(f\"- Predicted {'Growth' if price_change > 0 else 'Decline'}: {price_change:.2f}%\")\n",
+    "    print(f\"- Average Confidence Interval Width: ${avg_ci_width:.2f}\")\n",
+    "    print(f\"- Recent Historical Volatility (30-day): {last_volatility:.4f}\")\n",
+    "    if asset == 'TSLA':\n",
+    "        print(\"  * High forecast uncertainty (wide CI) typical for growth stocks\")\n",
+    "    elif asset == 'BND':\n",
+    "        print(\"  * Interest rate sensitivity in bond markets\")\n",
+    "    else:\n",
+    "        print(\"  * Market-wide systemic risks\")"
+   ]
   }
  ],
  "metadata": {
