portfolio optimization and analysis

--- a/notebooks/portfolio_optimization.ipynb
+++ b/notebooks/portfolio_optimization.ipynb
@@ -100,6 +100,88 @@
     "print(\"\\nAnnualized Covariance Matrix:\")\n",
     "print(cov_matrix.round(4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Optimization Results:\n",
+      "TSLA: 0.00%\n",
+      "BND: 0.00%\n",
+      "SPY: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Portfolio Optimization\n",
+    "# ======================\n",
+    "def sharpe_ratio(weights, er=expected_returns, cov=cov_matrix, risk_free=0.02):\n",
+    "    \"\"\"Calculate negative Sharpe ratio for minimization\"\"\"\n",
+    "    port_return = np.dot(weights, er)\n",
+    "    port_vol = np.sqrt(np.dot(weights.T, np.dot(cov, weights)))\n",
+    "    return -(port_return - risk_free) / port_vol\n",
+    "\n",
+    "# Constraints\n",
+    "constraints = ({'type': 'eq', 'fun': lambda x: np.sum(x) - 1})\n",
+    "bounds = tuple((0, 1) for _ in range(3))\n",
+    "\n",
+    "# Initial guess (equal weights)\n",
+    "init_weights = np.array([1/3, 1/3, 1/3])\n",
+    "\n",
+    "# Optimize\n",
+    "result = minimize(sharpe_ratio, init_weights,\n",
+    "                  method='SLSQP', bounds=bounds,\n",
+    "                  constraints=constraints)\n",
+    "\n",
+    "optimal_weights = result.x\n",
+    "print(\"\\nOptimization Results:\")\n",
+    "print(f\"TSLA: {optimal_weights[0]:.2%}\")\n",
+    "print(f\"BND: {optimal_weights[1]:.2%}\")\n",
+    "print(f\"SPY: {optimal_weights[2]:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Portfolio Metrics:\n",
+      "Expected Annual Return: 6.73%\n",
+      "Annual Volatility: 0.08%\n",
+      "Sharpe Ratio: 58.44\n",
+      "TSLA 95% Daily VaR: -0.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Portfolio Analysis\n",
+    "# ======================\n",
+    "# Calculate portfolio metrics\n",
+    "port_return = np.dot(optimal_weights, expected_returns)\n",
+    "port_vol = np.sqrt(np.dot(optimal_weights.T, np.dot(cov_matrix, optimal_weights)))\n",
+    "sharpe = (port_return - 0.02) / port_vol\n",
+    "\n",
+    "# Value at Risk (Historical Simulation)\n",
+    "returns_tsla = returns['TSLA']\n",
+    "var_95 = np.percentile(returns_tsla, 5)\n",
+    "\n",
+    "print(\"\\nPortfolio Metrics:\")\n",
+    "print(f\"Expected Annual Return: {port_return:.2%}\")\n",
+    "print(f\"Annual Volatility: {port_vol:.2%}\")\n",
+    "print(f\"Sharpe Ratio: {sharpe:.2f}\")\n",
+    "print(f\"TSLA 95% Daily VaR: {var_95:.2%}\")\n"
+   ]
   }
  ],
  "metadata": {
